--- a/examples/catalog-harness-cicd.yaml
+++ b/examples/catalog-harness-cicd.yaml
@@ -5,10 +5,10 @@ metadata:
   description: demo
   annotations:
     # mandatory annotation
-    harness.io/project-url: <harness_project_url>
+    harness.io/project-url: https://github.pie.apple.com/MOP/samplenotificationservice/blob/harness-qi-test/catalog-info-test.yaml
     # optional annotations, don't include this block if not needed. Add this if specific pipeline executions needs to be shown on the Plugin. When specified, latest pipeline execution details for configured pipelineIds(max 10) and configured serviceId will be shown.
-    harness.io/ci-pipelineIds: <pipelineId1,pipelineId2,pipelineId3 etc>
-    harness.io/cd-serviceId: <serviceId>
+#     harness.io/ci-pipelineIds: <pipelineId1,pipelineId2,pipelineId3 etc>
+#     harness.io/cd-serviceId: <serviceId>
   tags:
     - java
 
